[package]
name = "conrod_hw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#conrod = { version = "0.55.0", features = ["glium", "winit"] }
conrod = { version = "0.55.0", features = ["glium", "winit"] }
find_folder="0.3.0"